--- a/ui/src/features/project/list/project-item/project-item.module.less
+++ b/ui/src/features/project/list/project-item/project-item.module.less
@@ -1,6 +1,13 @@
 .tile {
-  padding: ~"@{sizeMD}px";
-  border-radius: ~"@{borderRadiusLG}px";
+  padding: ~'@{sizeMD}px';
+  border-radius: ~'@{borderRadiusLG}px';
   box-shadow: 1px 1px #eee;
   border: 1px solid @colorBorder;
+  text-decoration: none !important;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 600;
+  color: black;
 }
