--- a/ui/src/pages/environment.module.less
+++ b/ui/src/pages/environment.module.less
@@ -21,7 +21,7 @@
   justify-content: center;
 }
 
-.envTitleLabel {
+.titleLabel {
   font-size: 12px;
   color: rgb(122, 122, 122);
   font-weight: 500;
@@ -29,7 +29,7 @@
 }
 
 .sectionTitle {
-  font-size: 1em;
+  font-size: 1.5em;
   font-weight: 600;
   margin-bottom: 1em;
 }
@@ -38,8 +38,27 @@
   margin-bottom: 1em;
 }
 
-.subscriptionSectionTitle {
-  font-size: 1em;
+.subtitle {
+  font-size: 16px;
   font-weight: 600;
   margin-bottom: 1em;
+}
+
+.promotionPolicy {
+  margin-bottom: 1em;
+  background: rgb(245, 245, 245);
+  border-radius: 5px;
+  padding: 1em;
+}
+
+.section {
+  margin-bottom: 2em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid rgb(230, 230, 230);
+}
+
+.dataLabel {
+  width: 300px;
+  padding: 0.5em 0;
+  display: inline-block;
 }
