--- a/ui/src/pages/project.module.less
+++ b/ui/src/pages/project.module.less
@@ -1,13 +1,6 @@
-.header {
-  font-weight: 600;
-}
-
-.subHeader {
-  font-size: 18px;
-  margin-bottom: 2em;
-}
-
 .environmentItem {
+  display: flex;
+  align-items: center;
   cursor: pointer;
   padding: 1em;
   border-radius: 5px;
